--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+hubmap-kidney-segmentation.zip
+test/
+train/
+train.csv
+HuBMAP-20-dataset_information.csv
+sample_submission.csv
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
